tests/paczka1/fuzzy1/21891499.err
Error in line 2: Fkq S503 3,5
Error in line 9: PyMgf8Q6 S320 26,4
Error in line 3: Fkq S369 27,3
Error in line 14: Fkq S503 78,1
Error in line 22: ABO1c4F A892 78,5
Error in line 31: ABO1c4F S503 84,97
Error in line 24: ABO1c4F S320 59,8
